# PY32F0xx_CMake_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: gcc-arm-none-eabi.cmake
cmake/PY32F0xxLib/: CMakeLists.txt
